--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
 *.data
 *.pdf
+baselines/cohesive_subgraph_bipartite
+baselines/parallel-mbe
+bin
+datasets
+scripts/progress.txt
+scripts/results.txt
+src/build
+
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
